2007-11-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-14-00
	* sql: add tables SoftwareSubsystems/SoftwarePackages, and a new
	foreign key 'packageId' to all *Templates tables. Propagate to
	stored procedures.
	* parser: fill the above tables accordingly for both MySQL and
	Oracle (Jonathan)
	* confdb/data: account for subsystems and packages in
	SoftwareRelease
	* confdb/gui: allow the user to browse the current release and all
	templates. So far, only subsystem/package/template is shown in the
	tree-dialog which appears if the release button is pressed in the
	upper left configuration panel
	* confdb/db: account for subsystems and releases in ConfDB when
	loading the release

2007-10-25  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-12-00
	* significantly improved db access performance, mainly due to the
	use of stored procedures and temporary tables
	* many parser patches, plus untracked parameters are not updated
	according to *.cfi files anymore
	* introduction of IConfiguration and ConfigurationModifier,
	converter/gui were partially migrated, but it isn't used much yet
	* ConverterEngine added
	* 'war' target added to build.xml, allows deployment to webserver
	(see README)
	* read-only operations now enabled for locked configurations
	* es_prefer is now considered for ESModules and ESSources
		

2007-10-08  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-05
	* sql: add field 'description'/VARCHAR(1024) to table
	'Configurations'

2007-10-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-04
	* bug-fix: avoid uncaught exception if 'Cancel' is choosen in the
	SaveAs dialog for a new (v=0) configuration

2007-09-26  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-11-03
	* parser: collect latest fixes
	* DB: disbable JDBC's auto-commit when storing a configuration
	* GUI/DB: allow for a path to be declared endpath